<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/capturedImage"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_description"
        android:cropToPadding="true"
        android:scaleType="fitCenter" />

    <Button
        android:id="@+id/captureImageBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/take_pic_btn_text"
        android:background="@drawable/button_style"
        android:layout_below="@id/capturedImage"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1F3C88"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_above="@id/formTitle"
        android:layout_below="@id/captureImageBtn"/>

    <TextView
        android:id="@+id/formTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_title"
        android:layout_alignParentStart="true"
        android:layout_above="@id/timeView"
        android:layout_margin="10dp"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_above="@id/resultView1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/time_hint"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_above="@id/resultView1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/date_hint"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/resultView1"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_above="@id/lotView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/a1c_hint_1"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/resultView2"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_above="@id/instIdView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/a1c_hint_2"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lotView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_above="@id/testIdView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/lot_hint"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/instIdView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_above="@id/operatorView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/inst_id_hint"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/testIdView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_above="@id/submitBtn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/test_id_hint"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/operatorView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_above="@id/submitBtn"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/operator_hint"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/submit_btn_text"
        android:background="@drawable/button_style"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>